--- a/.github/workflows/news-scraper-app.yml
+++ b/.github/workflows/news-scraper-app.yml
@@ -1,23 +1,35 @@
-name: Python Flask News Scraper CI
-
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:17
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: 9257postgres
+          POSTGRES_DB: newsdb
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
+    env:
+      DATABASE_URL: postgresql://postgres:9257postgres@localhost:5432/newsdb
 
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Python 3.13
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.13'
@@ -27,6 +39,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run tests
+    - name: Run Tests
       run: |
         pytest tests/
