--- a/news-scraper-app.yml
+++ b/news-scraper-app.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       postgres:
-        image: postgres:14
+        image: postgres:17
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: password
@@ -27,7 +27,7 @@ jobs:
           --health-retries=5
 
     env:
-      DATABASE_URL: postgresql://postgres:password@localhost:5432/newsdb
+      DATABASE_URL: postgresql://postgres:9257postgres@localhost:5432/newsdb
 
     steps:
     - name: Checkout code
