--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,8 +4,17 @@ on: [push, pull_request]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:latest
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: test_user
+          POSTGRES_PASSWORD: test_password
+          POSTGRES_DB: test_db
 
     steps:
     - uses: actions/checkout@v3
@@ -23,5 +32,6 @@ jobs:
     - name: Run tests
       env:
         PYTHONPATH: "${{ github.workspace }}"
+        DATABASE_URL: postgres://test_user:test_password@localhost:5432/test_db
       run: |
         pytest tests/
